--- a/public/styles.css
+++ b/public/styles.css
@@ -123,7 +123,7 @@ h1 {
   .image-grid img {
     width: 100%;
     height: 400px; 
-    object-fit: cover; 
+    object-fit: fill; 
     border: 3px solid #153448;
     border-radius: 10px;
   }
